src/scripts/OSUIFramework/Pattern/Tabs/scss/_tabs.scss
/*! Patterns - Navigation - Tabs */
////
/// @group Patterns-Tabs
/// Patterns - Navigation - Tabs

///
.osui-tabs {
	--header-item-width: fit-content(30%);
	--header-item-alignment: auto;
	display: grid;
	height: var(--tabs-height);

	&--is-vertical {
		&[data-direction='next'] {
			.osui-tabs__header-item::after {
				transform-origin: top;
			}
		}

		&[data-direction='previous'] {
			.osui-tabs__header-item::after {
				transform-origin: bottom;
			}
		}

		&.osui-tabs--is-right {
			grid-auto-flow: dense;
			grid-template-columns: 1fr var(--header-item-width);

			.osui-tabs__header {
				grid-column: 2;

				&-item {
					justify-content: flex-end;
					padding: var(--space-xs) 0 var(--space-xs) var(--space-base);

					&::after {
						left: 0;
						top: 0;
					}

					&:not(.osui-tabs--is-active)::after {
						border-left: var(--border-size-m) solid var(--color-neutral-6);
						opacity: 0;
					}

					&:hover:not(.osui-tabs--is-active)::after {
						opacity: 1;
					}

					&.osui-tabs--is-active::after {
						border-left: var(--border-size-m) solid var(--color-primary);
					}
				}
			}

			.osui-tabs__content {
				border-right: var(--border-size-s) solid var(--color-neutral-5);
				margin-right: -1px;
			}
		}

		&.osui-tabs--is-left {
			grid-auto-flow: row;
			grid-template-columns: var(--header-item-width) 1fr;

			.osui-tabs__header {
				&-item {
					justify-content: flex-start;
					padding: var(--space-xs) var(--space-base) var(--space-xs) 0;

					&::after {
						right: calc(0px - var(--border-size-m));
						top: 0;
					}

					&:not(.osui-tabs--is-active)::after {
						border-right: var(--border-size-m) solid var(--color-neutral-6);
						opacity: 0;
					}

					&:hover:not(.osui-tabs--is-active)::after {
						opacity: 1;
					}

					&.osui-tabs--is-active::after {
						border-right: var(--border-size-m) solid var(--color-primary);
					}
				}
			}

			.osui-tabs__content {
				border-left: var(--border-size-s) solid var(--color-neutral-5);
				margin-left: -1px;
			}
		}

		&.osui-tabs--has-drag {
			.osui-tabs__content {
				overflow-x: hidden;
			}
		}

		.osui-tabs__header {
			align-content: start;
			grid-template-rows: repeat(var(--tabs-header-items), var(--header-item-alignment));
			overflow-y: auto;
			overflow-x: hidden;

			&-item {
				border-right: var(--border-size-m) solid transparent;
				flex: none;

				&.osui-tabs--is-active::after {
					height: 100%;
				}
			}
		}

		.osui-tabs__content {
			overflow-y: auto;
			padding: var(--space-none) var(--space-m);
			width: auto;
		}
	}

	&--is-horizontal {
		grid-auto-flow: column;
		grid-template-rows: auto 1fr;

		&[data-direction='next'] {
			.osui-tabs__header-item::after {
				transform-origin: left;
			}
		}

		&[data-direction='previous'] {
			.osui-tabs__header-item::after {
				transform-origin: right;
			}
		}

		.osui-tabs__header {
			grid-template-columns: repeat(var(--tabs-header-items), var(--header-item-alignment));
			justify-content: start;
			overflow-y: hidden;
			overflow-x: auto;
			word-break: keep-all;

			&-item {
				border-bottom: var(--border-size-m) solid transparent;
				justify-content: center;
				padding: var(--space-base) var(--space-xs);

				&::after {
					bottom: calc(0px - var(--border-size-m));
					left: 0;
				}

				&:not(.osui-tabs--is-active)::after {
					border-bottom: var(--border-size-m) solid var(--color-neutral-6);
					opacity: 0;
				}

				&:hover:not(.osui-tabs--is-active)::after {
					opacity: 1;
				}

				&.osui-tabs--is-active::after {
					border-bottom: var(--border-size-m) solid var(--color-primary);
				}
			}
		}

		.osui-tabs__content {
			border-top: var(--border-size-s) solid var(--color-neutral-5);
			margin-top: -1px;
			overflow-y: hidden;
			padding: var(--space-m) var(--space-none);
		}
	}

	&--is-justified {
		--header-item-alignment: 1fr;

		&.osui-tabs--is-horizontal {
			.osui-tabs__header {
				justify-content: initial;
			}
		}

		&.osui-tabs--is-vertical {
			.osui-tabs__header {
				align-content: initial;
			}
		}
	}

	&:not(.osui-tabs--has-drag) {
		.osui-tabs__content {
			&-item:not(.osui-tabs--is-active) {
				display: none;
			}
		}
	}

	&--has-drag {
		&.osui-tabs--is-horizontal {
			.osui-tabs__content {
				grid-auto-flow: column;
				grid-auto-columns: 100%;
				overflow-y: hidden;
				overflow-x: auto;
				overscroll-behavior-x: contain;
				scroll-snap-type: x mandatory;

				&-item {
					scroll-snap-align: start;
					scroll-snap-stop: always;
				}

				.ph > .list {
					display: contents;
				}
			}
		}

		&.osui-tabs--is-vertical {
			.osui-tabs__content {
				&-item:not(.osui-tabs--is-active) {
					display: none;
				}
			}
		}
	}

	&__header {
		display: grid;

		&-item {
			align-items: center;
			background-color: transparent;
			border: none;
			color: var(--color-neutral-8);
			cursor: pointer;
			display: inline-flex;
			height: 100%;
			position: relative;
			min-height: 42px;
			text-align: unset;
			width: 100%;

			&:hover:not(.osui-tabs--is-active) {
				color: var(--color-neutral-10);
			}

			&.osui-tabs--is-active {
				color: var(--color-primary);

				&::after {
					transform: scaleX(1);
				}
			}

			&::after {
				content: '';
				height: 100%;
				pointer-events: none;
				position: absolute;
				transform: scaleX(0);
				transform-origin: center;
				transition: transform 150ms linear;
				width: 100%;
				z-index: 1;
			}
		}

		// Service Studio preview
		& {
			-servicestudio-display: grid;
			-servicestudio-grid-auto-flow: column;
			-servicestudio-gap: var(--space-s);
		}

		.ph > .list {
			display: contents;
		}
	}

	&__content {
		display: grid;
		height: 100%;
		overflow-x: hidden;
		width: 100%;

		&::-webkit-scrollbar {
			display: none;
		}

		&-item {
			overflow-y: auto;

			// Service Studio Preview
			& {
				-servicestudio-display: block !important;
				-servicestudio-margin-bottom: var(--space-m);
			}
		}
	}

	&__header,
	&__content {
		.ph > .OSBlockWidget {
			display: contents;
		}
	}

	// Service Studio Preview
	& {
		.osui-tabs__header-item,
		.osui-tabs__header-item > *,
		.osui-tabs__content-item {
			-servicestudio-border: 1px dashed var(--color-neutral-5);
			-servicestudio-width: 100%;
		}
	}
}

///
.is-rtl {
	.osui-tabs {
		&.osui-tabs--is-vertical {
			&.osui-tabs--is-right {
				.osui-tabs__header {
					&-item {
						justify-content: flex-start;
						padding: var(--space-xs) var(--space-base) var(--space-xs) 0;

						&::after {
							right: calc(0px - var(--border-size-m));
						}

						&:not(.osui-tabs--is-active)::after {
							border-right: var(--border-size-m) solid var(--color-neutral-6);
						}

						&.osui-tabs--is-active::after {
							border-right: var(--border-size-m) solid var(--color-primary);
						}
					}
				}

				.osui-tabs__content {
					border-left: var(--border-size-s) solid var(--color-neutral-5);
					margin-left: -1px;
					border-right: 0;
				}
			}

			&.osui-tabs--is-left {
				.osui-tabs__header {
					grid-column: 1;

					&-item {
						padding: var(--space-xs) 0 var(--space-xs) var(--space-base);

						&::after {
							left: 0;
							right: unset;
							top: 0;
						}

						&:not(.osui-tabs--is-active)::after {
							border-left: var(--border-size-m) solid var(--color-neutral-6);
						}

						&.osui-tabs--is-active::after {
							border-left: var(--border-size-m) solid var(--color-primary);
						}
					}
				}

				.osui-tabs__content {
					border-right: var(--border-size-s) solid var(--color-neutral-5);
					margin-right: -1px;
					border-left: 0;
				}
			}
		}
	}
}

///
.has-accessible-features {
	.osui-tabs {
		&--is-vertical {
			.osui-tabs__header-item {
				&::after {
					width: calc(100% + var(--border-size-m));
				}
			}
		}

		&__header-item {
			&:focus {
				box-shadow: none;
			}

			&::after {
				box-sizing: border-box;
			}

			&.osui-tabs--is-active:focus-visible::after {
				border: var(--border-size-m) solid var(--color-focus-outer);
			}
		}
	}
}

// Service Studio Preview Message
.osui-tabs__preview {
	display: none;
}

// Hybrid Preview
html[data-uieditorversion^='1'] .osui-tabs__preview {
	&.osui-tabs__preview--is-active {
		-servicestudio-display: block;
		-servicestudio-height: auto;
		-servicestudio-min-height: 48px;
		-servicestudio-width: auto;
		-servicestudio-position: relative;
	}

	&--is-active::after {
		-servicestudio-align-items: center;
		-servicestudio-background-color: var(--color-neutral-0);
		-servicestudio-border: 1px solid var(--color-neutral-3);
		-servicestudio-content: 'TabsContentItems are currently hidden. Use the toggle to preview them inside Service Studio.';
		-servicestudio-display: flex;
		-servicestudio-justify-content: center;
		-servicestudio-font-weight: var(--font-semi-bold);
		-servicestudio-height: auto;
		-servicestudio-padding: var(--space-s);
		-servicestudio-position: absolute;
		-servicestudio-width: 100%;
	}
}

